fixes spacing of image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ a {
   width: 100%;
   border: 1em solid #fafafa;
   border-radius: 50%;
-  margin-left: -56%;
+  margin-left: -65%;
   filter: grayscale(1) brightness(1.4);
 }
 
@@ -57,7 +57,7 @@ a {
 }
 
 .name-card {
-  padding-top: 6em;
+  padding-top: 7em;
   padding-right: 2em;
   grid-column-start: 3;
   grid-column-end: 5;
@@ -234,7 +234,7 @@ ul {
   grid-row-start: 5;
   grid-row-end: 6;
   margin-left: -3em;
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 /* 00bb f3f */
